vn/vn_binio_f.F90

MODULE VN_BINIO_F
  IMPLICIT NONE

  INTERFACE
     FUNCTION VN_BOPEN_RO(FN, SZ) BIND(C,NAME='vn_bopen_ro')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_char, c_int, c_size_t
       IMPLICIT NONE
       CHARACTER(KIND=c_char), INTENT(IN), TARGET :: FN(*)
       INTEGER(KIND=c_size_t), INTENT(OUT), TARGET :: SZ
       INTEGER(KIND=c_int) :: VN_BOPEN_RO
     END FUNCTION VN_BOPEN_RO
  END INTERFACE

  INTERFACE
     FUNCTION VN_BOPEN_RW(FN, SZ) BIND(C,NAME='vn_bopen_rw')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_char, c_int, c_size_t
       IMPLICIT NONE
       CHARACTER(KIND=c_char), INTENT(IN), TARGET :: FN(*)
       INTEGER(KIND=c_size_t), INTENT(INOUT), TARGET :: SZ
       INTEGER(KIND=c_int) :: VN_BOPEN_RW
     END FUNCTION VN_BOPEN_RW
  END INTERFACE

  INTERFACE
     FUNCTION VN_BOPEN_WO(FN, SZ) BIND(C,NAME='vn_bopen_wo')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_char, c_int, c_size_t
       IMPLICIT NONE
       CHARACTER(KIND=c_char), INTENT(IN), TARGET :: FN(*)
       INTEGER(KIND=c_size_t), INTENT(INOUT), TARGET :: SZ
       INTEGER(KIND=c_int) :: VN_BOPEN_WO
     END FUNCTION VN_BOPEN_WO
  END INTERFACE

  INTERFACE
     FUNCTION VN_BCLOSE(FD) BIND(C,NAME='vn_bclose')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_int
       IMPLICIT NONE
       INTEGER(KIND=c_int), INTENT(IN), VALUE :: FD
       INTEGER(KIND=c_int) :: VN_BCLOSE
     END FUNCTION VN_BCLOSE
  END INTERFACE

  INTERFACE
     FUNCTION VN_BWRITE(FD, BUF, nB, OFF) BIND(C,NAME='vn_bwrite')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_ptr, c_int, c_size_t
       IMPLICIT NONE
       INTEGER(KIND=c_int), INTENT(IN), VALUE :: FD
       TYPE(c_ptr), INTENT(IN), VALUE :: BUF
       INTEGER(KIND=c_size_t), INTENT(IN), VALUE :: nB, OFF
       INTEGER(KIND=c_size_t) :: VN_BWRITE
     END FUNCTION VN_BWRITE
  END INTERFACE

  INTERFACE
     FUNCTION VN_BREAD(FD, BUF, nB, OFF) BIND(C,NAME='vn_bread')
       USE, INTRINSIC :: ISO_C_BINDING, ONLY: c_ptr, c_int, c_size_t
       IMPLICIT NONE
       INTEGER(KIND=c_int), INTENT(IN), VALUE :: FD
       TYPE(c_ptr), INTENT(IN), VALUE :: BUF
       INTEGER(KIND=c_size_t), INTENT(IN), VALUE :: nB, OFF
       INTEGER(KIND=c_size_t) :: VN_BREAD
     END FUNCTION VN_BREAD
  END INTERFACE

CONTAINS
END MODULE VN_BINIO_F
